--- a/MT2/1_minitarea2.ipynb
+++ b/MT2/1_minitarea2.ipynb
@@ -9,7 +9,17 @@
   },
   "kernelspec": {
    "name": "python3",
+   "language": "python",
    "display_name": "Python 3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "cells": [
@@ -56,7 +66,23 @@
     "colab_type": "text"
    },
    "source": [
-    "**Respuesta:**"
+    "**Respuesta:**\n",
+    "\n",
+    "Se adiciona el token especial `STOP` a los tokens de la oración.\n",
+    "Así lo que se calcula es: $P(el,perro,le,ladra,al,gato,STOP)$.\n",
+    "\n",
+    "Se le agregan los tokens extras de Padding, así:\n",
+    "\n",
+    "$P(*,*,el,perro,le,ladra,al,gato,STOP)$\n",
+    "\n",
+    "Se utiliza regla de la cadena y usando un modelo de Markov de Segundo Orden:\n",
+    "\n",
+    "$P(el|*,*) \\times P(perro|*,el) \\times P(le|el,perro) \\times P(ladra|perro,le) \\times $\n",
+    "$P(al| le,ladra) \\times P(gato|ladra,al) \\times P(STOP| al,gato )$\n",
+    "\n",
+    "Estas son equivalentes a los parámetros obtenidos del corpus $C$:\n",
+    "$q(el|*,*) \\times q(perro|*,el) \\times q(le|el,perro) \\times q(ladra|perro,le) \\times $\n",
+    "$q(al| le,ladra) \\times q(gato|ladra,al) \\times q(STOP| al,gato )$"
    ]
   },
   {
@@ -77,7 +103,16 @@
     "colab_type": "text"
    },
    "source": [
-    "**Respuesta:**"
+    "**Respuesta:**\n",
+    "\n",
+    "Supongamos que se tienen 3 modelos de lenguajes: Uno con Trigramas ($T$), otro con Bigramas ($B$) y uno con Unigramas ($U$), \n",
+    "con sus respectivas probabilidades $q_T(w_i|w_{i-2},w_{i-1})$, $q_B(w_i|w_{i-1})$ y $q_U(w_i|w_{i-1})$ respectivamente, que pueden ser calculados de diferentes formas.\n",
+    "\n",
+    "Sea $\\lambda_1,\\lambda_2,\\lambda_3\\ge 0$ tal que $\\lambda_1+\\lambda_2+\\lambda_3 = 1$\n",
+    "\n",
+    "$q(w_{i} | w_{i-2}, w_{i-1})$ será calculado a partir de un interpolación lineal de las probabilidades de mencionadas anteriomente, es decir: \n",
+    "\n",
+    "$q(w_{i} | w_{i-2}, w_{i-1}) = \\lambda_1 \\cdot q_U(w_{i}) + \\lambda_2 \\cdot q_B(w_{i}|w_{i-1}) + \\lambda_3 \\cdot q_B(w_{i}|w_{i-2},w_{i-1}) $"
    ]
   },
   {
@@ -98,7 +133,11 @@
     "colab_type": "text"
    },
    "source": [
-    "**Respuesta:**"
+    "**Respuesta:**\n",
+    "El modelo interpolado es más flexible a los casos cuando se le calculan probablidades de oraciones (en particular trigramas) que no existen en el Corpus de entrenamiento. \n",
+    "De esta forma no se da probabilidad 0 a oraciones que tengan \n",
+    "secuencias de palabras que no se hayan visto nunca en el entrenamiento.\n",
+    "\n"
    ]
   },
   {
@@ -137,6 +176,8 @@
    "source": [
     "from pprint import pprint\n",
     "from collections import namedtuple\n",
+    "\n",
+    "\n",
     "document = namedtuple(\n",
     "    \"document\", (\"words\", \"class_\")  # avoid python's keyword collision\n",
     ")\n",
@@ -153,6 +194,7 @@
     ")\n",
     "print(\"Train documents:\")\n",
     "pprint(train_set)\n",
+    "\n",
     "\n",
     "\n",
     "test_set = (document(words=('w02', 'w09', 'w06', 'w01', 'w05', 'w04', 'w03', 'w03'), class_=None),)\n",
@@ -189,7 +231,32 @@
     "colab": {}
    },
    "source": [
-    "# Tu respuesta"
+    "# Tu respuesta\n",
+    "\n",
+    "def class_prob(set):\n",
+    "    \"\"\"\n",
+    "    Calcula la probabilidad de cada clase\n",
+    "    :param set: \n",
+    "    :return: \n",
+    "    \"\"\"\n",
+    "    return 0\n",
+    "\n",
+    "\n",
+    "def word_prob(word, c, count_data):\n",
+    "    \"\"\"\n",
+    "    Retorna la probablidad P(word|c) según count_data\n",
+    "    :param word: \n",
+    "    :param c: \n",
+    "    :param count_data: \n",
+    "    :return: \n",
+    "    \"\"\"\n",
+    "\n",
+    "def learn_and_train(set):\n",
+    "    \"\"\"\n",
+    "    Aprende segun un conjunto rotulado de texto\n",
+    "    :param set: \n",
+    "    :return: \n",
+    "    \"\"\""
    ],
    "execution_count": 0,
    "outputs": []
