--- a/MT2/1_minitarea2.ipynb
+++ b/MT2/1_minitarea2.ipynb
@@ -135,8 +135,8 @@
    "source": [
     "**Respuesta:**\n",
     "El modelo interpolado es más flexible a los casos cuando se le calculan probablidades de oraciones (en particular trigramas) que no existen en el Corpus de entrenamiento. \n",
-    "De esta forma no se da probabilidad 0 a oraciones que tengan \n",
-    "secuencias de palabras que no se hayan visto nunca en el entrenamiento.\n",
+    "De esta forma no se da probabilidad $0$ a oraciones que tengan \n",
+    "secuencias de palabras que no se hayan visto nunca en el entrenamiento, que es factible que ocurra en realidad.\n",
     "\n"
    ]
   },
@@ -171,6 +171,9 @@
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 225
+    },
+    "pycharm": {
+     "is_executing": false
     }
    },
    "source": [
@@ -192,6 +195,7 @@
     "    document(words=('w04', 'w03', 'w07', 'w05', 'w04', 'w00', 'w02'), class_=0),\n",
     "    document(words=('w01', 'w00', 'w01', 'w04', 'w09', 'w02', 'w04', 'w07'), class_=1)\n",
     ")\n",
+    "\n",
     "print(\"Train documents:\")\n",
     "pprint(train_set)\n",
     "\n",
@@ -199,67 +203,124 @@
     "\n",
     "test_set = (document(words=('w02', 'w09', 'w06', 'w01', 'w05', 'w04', 'w03', 'w03'), class_=None),)\n",
     "print(\"\\nTest documents:\")\n",
-    "pprint(test_set)"
+    "pprint(test_set)\n"
    ],
-   "execution_count": 2,
+   "execution_count": 8,
    "outputs": [
     {
-     "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Train documents:\n",
-      "(document(words=('w03', 'w01', 'w02', 'w06', 'w02', 'w08', 'w07'), class_=0),\n",
-      " document(words=('w05', 'w04', 'w00', 'w06', 'w09', 'w07', 'w06', 'w09', 'w05'), class_=1),\n",
-      " document(words=('w07', 'w06', 'w00', 'w08', 'w01', 'w08', 'w08', 'w09', 'w02'), class_=0),\n",
-      " document(words=('w08', 'w09', 'w02', 'w06', 'w05', 'w08', 'w07'), class_=1),\n",
-      " document(words=('w09', 'w08', 'w05', 'w08', 'w05', 'w00', 'w08'), class_=1),\n",
-      " document(words=('w05', 'w05', 'w06', 'w01', 'w06', 'w08', 'w02'), class_=1),\n",
-      " document(words=('w04', 'w03', 'w07', 'w05', 'w04', 'w00', 'w02'), class_=0),\n",
-      " document(words=('w01', 'w00', 'w01', 'w04', 'w09', 'w02', 'w04', 'w07'), class_=1))\n",
-      "\n",
-      "Test documents:\n",
-      "(document(words=('w02', 'w09', 'w06', 'w01', 'w05', 'w04', 'w03', 'w03'), class_=None),)\n"
+      "Train documents:\n(document(words=('w03', 'w01', 'w02', 'w06', 'w02', 'w08', 'w07'), class_=0),\n document(words=('w05', 'w04', 'w00', 'w06', 'w09', 'w07', 'w06', 'w09', 'w05'), class_=1),\n document(words=('w07', 'w06', 'w00', 'w08', 'w01', 'w08', 'w08', 'w09', 'w02'), class_=0),\n document(words=('w08', 'w09', 'w02', 'w06', 'w05', 'w08', 'w07'), class_=1),\n document(words=('w09', 'w08', 'w05', 'w08', 'w05', 'w00', 'w08'), class_=1),\n document(words=('w05', 'w05', 'w06', 'w01', 'w06', 'w08', 'w02'), class_=1),\n document(words=('w04', 'w03', 'w07', 'w05', 'w04', 'w00', 'w02'), class_=0),\n document(words=('w01', 'w00', 'w01', 'w04', 'w09', 'w02', 'w04', 'w07'), class_=1))\n\nTest documents:\n(document(words=('w02', 'w09', 'w06', 'w01', 'w05', 'w04', 'w03', 'w03'), class_=None),)\n"
      ],
-     "name": "stdout"
+     "output_type": "stream"
     }
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "La implementación se realizó creando una clase que implementa Naive Bayes."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "metadata": {
     "id": "0edu0E7LA3U9",
     "colab_type": "code",
-    "colab": {}
+    "colab": {},
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "source": [
-    "# Tu respuesta\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
-    "def class_prob(set):\n",
-    "    \"\"\"\n",
-    "    Calcula la probabilidad de cada clase\n",
-    "    :param set: \n",
-    "    :return: \n",
-    "    \"\"\"\n",
-    "    return 0\n",
+    "class Naive_Bayes:\n",
+    "    count_data = pd.DataFrame() # Conteo de palabras bajo una clase\n",
+    "    classes = [] # Rotulos de clases\n",
+    "    vocab = []   # Palabras del Vocabulario\n",
+    "    class_count = [] # Conteo total de clases\n",
+    "    word_count = []  # Conteo total de palabras\n",
+    "    \n",
+    "    def __init__(self, train):\n",
+    "        # Get classes + Get Vocab\n",
+    "        for T in train:\n",
+    "            if not T.class_ in self.classes:\n",
+    "                self.classes += [T.class_]\n",
+    "                \n",
+    "            for w in T.words:\n",
+    "                if not w in self.vocab:\n",
+    "                    self.vocab += [w]\n",
+    "            \n",
+    "        # Create dataframe\n",
+    "        self.count_data = pd.DataFrame(columns=self.vocab, index=self.classes)\n",
+    "        \n",
+    "        # Count total words ocurrences and class ocurrences\n",
+    "        self.word_count = np.zeros(len(self.vocab))\n",
+    "        self.class_count = np.zeros(len(self.classes))         \n",
+    "        for T in train:\n",
+    "            class_index = self.classes.index(T.class_)\n",
+    "            self.class_count[class_index] += 1\n",
+    "            for w in T.words:\n",
+    "                word_index = self.vocab.index(w)\n",
+    "                self.word_count[word_index] += 1\n",
+    "        \n",
+    "        # Count words with their respective class\n",
+    "        for c in self.classes:\n",
+    "            count = np.zeros(len(self.vocab))\n",
+    "            for T in train:\n",
+    "                if T.class_ == c:\n",
+    "                    for w in T.words:\n",
+    "                        count[self.vocab.index(w)] += 1\n",
+    "            self.count_data.loc[c] = count\n",
     "\n",
     "\n",
-    "def word_prob(word, c, count_data):\n",
-    "    \"\"\"\n",
-    "    Retorna la probablidad P(word|c) según count_data\n",
-    "    :param word: \n",
-    "    :param c: \n",
-    "    :param count_data: \n",
-    "    :return: \n",
-    "    \"\"\"\n",
+    "    def class_prob(self, class_): # P(c)\n",
+    "        class_index = self.classes.index(class_)\n",
+    "        return self.class_count[class_index] / sum(self.class_count)\n",
+    "            \n",
     "\n",
-    "def learn_and_train(set):\n",
-    "    \"\"\"\n",
-    "    Aprende segun un conjunto rotulado de texto\n",
-    "    :param set: \n",
-    "    :return: \n",
-    "    \"\"\""
+    "    def word_prob(self, word, c): # P(w|c)\n",
+    "        word_index = self.vocab.index(word)\n",
+    "        word_class_count = self.count_data.loc[c][word_index]\n",
+    "        word_total_count = self.word_count[word_index]\n",
+    "        # Retorno la probablidad con LaPlace Smoothing\n",
+    "        return (word_class_count + 1) / (word_total_count + len(self.vocab))\n",
+    "\n",
+    "    def get_class(self, words): \n",
+    "        classValue = np.zeros(len(self.classes))\n",
+    "        # Por cada clase calcula el P(c|d=w1, w2,...,wn)\n",
+    "        for c in self.classes:\n",
+    "            class_index = self.classes.index(c)\n",
+    "            # Calculo su valor que es la suma de los logs\n",
+    "            classValue[class_index] += np.log2(self.class_prob(c))\n",
+    "            for w in words:\n",
+    "                classValue[class_index] += np.log2(self.word_prob(w,c))\n",
+    "        \n",
+    "        # Retorno la que tiene mayor score\n",
+    "        return self.classes[np.argmax(classValue)]\n",
+    "                        \n",
+    "myBayes = Naive_Bayes(train_set)\n",
+    "myBayes.get_class(test_set[0].words)"
    ],
-   "execution_count": 0,
-   "outputs": []
+   "execution_count": 16,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "-20.49685377738804"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 16
+    }
+   ]
   }
  ]
 }
