--- a/T1/T1 basre/assignment_1.ipynb
+++ b/T1/T1 basre/assignment_1.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-07T15:44:20.587160Z",
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-07T15:44:20.604066Z",
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-07T15:44:21.068137Z",
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-07T15:44:21.088707Z",
@@ -425,10 +425,10 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "        id                                              tweet  class  \\\n226  10226  Just paid for chicken at @panerabread and didn...  anger   \n602  10602  remember when that guy got #angry that i kept ...  anger   \n4    10004  Don't join @BTCare they put the phone down on ...  anger   \n837  10837  Follow me on Snapchat 👻 Carlabtst15 #snapchat ...  anger   \n135  10135  @dcexaminer Democrats and their voters have ze...  anger   \n\n    sentiment_intensity  \n226              medium  \n602              medium  \n4                  high  \n837                 low  \n135                high  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>tweet</th>\n      <th>class</th>\n      <th>sentiment_intensity</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>226</th>\n      <td>10226</td>\n      <td>Just paid for chicken at @panerabread and didn...</td>\n      <td>anger</td>\n      <td>medium</td>\n    </tr>\n    <tr>\n      <th>602</th>\n      <td>10602</td>\n      <td>remember when that guy got #angry that i kept ...</td>\n      <td>anger</td>\n      <td>medium</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>10004</td>\n      <td>Don't join @BTCare they put the phone down on ...</td>\n      <td>anger</td>\n      <td>high</td>\n    </tr>\n    <tr>\n      <th>837</th>\n      <td>10837</td>\n      <td>Follow me on Snapchat 👻 Carlabtst15 #snapchat ...</td>\n      <td>anger</td>\n      <td>low</td>\n    </tr>\n    <tr>\n      <th>135</th>\n      <td>10135</td>\n      <td>@dcexaminer Democrats and their voters have ze...</td>\n      <td>anger</td>\n      <td>high</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "        id                                              tweet  class  \\\n758  10758  @The_Boxing_Hub #klitschko @Klitschko over fur...  anger   \n336  10336   Hell hath not fury like a hamstring cramp. #ouch  anger   \n77   10077  What the fuck am I supposed to do with no lunc...  anger   \n195  10195  @RealBD_ @ReyesAverie 47 unarmed blacks killed...  anger   \n905  10905  Ok scrubbed hands 5 times before trying to put...  anger   \n\n    sentiment_intensity  \n758                 low  \n336              medium  \n77                 high  \n195              medium  \n905              medium  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>tweet</th>\n      <th>class</th>\n      <th>sentiment_intensity</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>758</th>\n      <td>10758</td>\n      <td>@The_Boxing_Hub #klitschko @Klitschko over fur...</td>\n      <td>anger</td>\n      <td>low</td>\n    </tr>\n    <tr>\n      <th>336</th>\n      <td>10336</td>\n      <td>Hell hath not fury like a hamstring cramp. #ouch</td>\n      <td>anger</td>\n      <td>medium</td>\n    </tr>\n    <tr>\n      <th>77</th>\n      <td>10077</td>\n      <td>What the fuck am I supposed to do with no lunc...</td>\n      <td>anger</td>\n      <td>high</td>\n    </tr>\n    <tr>\n      <th>195</th>\n      <td>10195</td>\n      <td>@RealBD_ @ReyesAverie 47 unarmed blacks killed...</td>\n      <td>anger</td>\n      <td>medium</td>\n    </tr>\n    <tr>\n      <th>905</th>\n      <td>10905</td>\n      <td>Ok scrubbed hands 5 times before trying to put...</td>\n      <td>anger</td>\n      <td>medium</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-07T15:44:21.117633Z",
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-07T15:44:21.128600Z",
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-07T15:44:21.145564Z",
@@ -562,10 +562,10 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "                                                   0          1\n0  @bt_uk why does tracking show my equipment del...  [1, 0, 2]\n1  Projection is perception. See it in someone el...  [1, 0, 1]\n2  Houston might lose a coach tomorrow or by midn...  [2, 0, 1]\n3  @CozanGaming that's what lisa asked before she...  [0, 0, 1]\n4  I wonder what would happen if I were to tell s...  [3, 0, 0]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>@bt_uk why does tracking show my equipment del...</td>\n      <td>[1, 0, 2]</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Projection is perception. See it in someone el...</td>\n      <td>[1, 0, 1]</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Houston might lose a coach tomorrow or by midn...</td>\n      <td>[2, 0, 1]</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>@CozanGaming that's what lisa asked before she...</td>\n      <td>[0, 0, 1]</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>I wonder what would happen if I were to tell s...</td>\n      <td>[3, 0, 0]</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                                                   0          1\n0  @lethargytyler ehhh I guess. I want to everyon...  [0, 0, 0]\n1  Some moving clips on youtube tonight of the vi...  [4, 0, 0]\n2  .@LEAFYSZERKER @markiplier is that an insult? ...  [1, 0, 1]\n3  Thursdays at 6pm Vespers &amp; Meditation #pra...  [9, 0, 0]\n4  It takes a man to suffer ignorance and smile. ...  [1, 0, 0]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>@lethargytyler ehhh I guess. I want to everyon...</td>\n      <td>[0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Some moving clips on youtube tonight of the vi...</td>\n      <td>[4, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>.@LEAFYSZERKER @markiplier is that an insult? ...</td>\n      <td>[1, 0, 1]</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Thursdays at 6pm Vespers &amp;amp; Meditation #pra...</td>\n      <td>[9, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>It takes a man to suffer ignorance and smile. ...</td>\n      <td>[1, 0, 0]</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-07T15:44:21.155528Z",
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-07T15:44:21.167498Z",
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-07T15:44:21.384119Z",
@@ -702,99 +702,99 @@
      "text": [
       "Confusion Matrix for anger:\n",
       "\n",
-      "[[  8  46   0]\n",
-      " [ 14 172  14]\n",
-      " [  1  37  19]]\n",
+      "[[  9  37   0]\n",
+      " [ 13 176  13]\n",
+      " [  1  47  15]]\n",
       "\n",
       "Classification Report:\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         low       0.35      0.15      0.21        54\n",
-      "      medium       0.67      0.86      0.76       200\n",
-      "        high       0.58      0.33      0.42        57\n",
+      "         low       0.39      0.20      0.26        46\n",
+      "      medium       0.68      0.87      0.76       202\n",
+      "        high       0.54      0.24      0.33        63\n",
       "\n",
       "    accuracy                           0.64       311\n",
-      "   macro avg       0.53      0.45      0.46       311\n",
-      "weighted avg       0.60      0.64      0.60       311\n",
+      "   macro avg       0.53      0.44      0.45       311\n",
+      "weighted avg       0.61      0.64      0.60       311\n",
       "\n",
       "Scores:\n",
       "\n",
-      "AUC:  0.639\tKappa: 0.182\tAccuracy: 0.64\n",
+      "AUC:  0.603\tKappa: 0.166\tAccuracy: 0.643\n",
       "------------------------------------------------------\n",
       "\n",
       "Confusion Matrix for fear:\n",
       "\n",
-      "[[ 33  78   2]\n",
-      " [ 23 171  26]\n",
-      " [  7  41  34]]\n",
+      "[[ 34  51   1]\n",
+      " [ 30 189  25]\n",
+      " [  4  39  42]]\n",
       "\n",
       "Classification Report:\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         low       0.52      0.29      0.38       113\n",
-      "      medium       0.59      0.78      0.67       220\n",
-      "        high       0.55      0.41      0.47        82\n",
+      "         low       0.50      0.40      0.44        86\n",
+      "      medium       0.68      0.77      0.72       244\n",
+      "        high       0.62      0.49      0.55        85\n",
       "\n",
-      "    accuracy                           0.57       415\n",
-      "   macro avg       0.55      0.49      0.51       415\n",
-      "weighted avg       0.56      0.57      0.55       415\n",
+      "    accuracy                           0.64       415\n",
+      "   macro avg       0.60      0.55      0.57       415\n",
+      "weighted avg       0.63      0.64      0.63       415\n",
       "\n",
       "Scores:\n",
       "\n",
-      "AUC:  0.691\tKappa: 0.237\tAccuracy: 0.573\n",
+      "AUC:  0.703\tKappa: 0.327\tAccuracy: 0.639\n",
       "------------------------------------------------------\n",
       "\n",
       "Confusion Matrix for joy:\n",
       "\n",
-      "[[ 24  47   2]\n",
-      " [ 30 121  23]\n",
-      " [  2  28  21]]\n",
+      "[[ 26  56   2]\n",
+      " [ 30 111  10]\n",
+      " [  1  26  36]]\n",
       "\n",
       "Classification Report:\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         low       0.43      0.33      0.37        73\n",
-      "      medium       0.62      0.70      0.65       174\n",
-      "        high       0.46      0.41      0.43        51\n",
+      "         low       0.46      0.31      0.37        84\n",
+      "      medium       0.58      0.74      0.65       151\n",
+      "        high       0.75      0.57      0.65        63\n",
       "\n",
-      "    accuracy                           0.56       298\n",
-      "   macro avg       0.50      0.48      0.49       298\n",
-      "weighted avg       0.54      0.56      0.55       298\n",
+      "    accuracy                           0.58       298\n",
+      "   macro avg       0.59      0.54      0.55       298\n",
+      "weighted avg       0.58      0.58      0.57       298\n",
       "\n",
       "Scores:\n",
       "\n",
-      "AUC:  0.684\tKappa: 0.185\tAccuracy: 0.557\n",
+      "AUC:  0.706\tKappa: 0.282\tAccuracy: 0.581\n",
       "------------------------------------------------------\n",
       "\n",
       "Confusion Matrix for sadness:\n",
       "\n",
-      "[[ 18  45   1]\n",
-      " [ 17 121  10]\n",
-      " [  3  42  27]]\n",
+      "[[ 17  53   5]\n",
+      " [ 13 109  25]\n",
+      " [  5  34  23]]\n",
       "\n",
       "Classification Report:\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         low       0.47      0.28      0.35        64\n",
-      "      medium       0.58      0.82      0.68       148\n",
-      "        high       0.71      0.38      0.49        72\n",
+      "         low       0.49      0.23      0.31        75\n",
+      "      medium       0.56      0.74      0.64       147\n",
+      "        high       0.43      0.37      0.40        62\n",
       "\n",
-      "    accuracy                           0.58       284\n",
-      "   macro avg       0.59      0.49      0.51       284\n",
-      "weighted avg       0.59      0.58      0.56       284\n",
+      "    accuracy                           0.52       284\n",
+      "   macro avg       0.49      0.45      0.45       284\n",
+      "weighted avg       0.51      0.52      0.50       284\n",
       "\n",
       "Scores:\n",
       "\n",
-      "AUC:  0.715\tKappa: 0.25\tAccuracy: 0.585\n",
+      "AUC:  0.646\tKappa: 0.165\tAccuracy: 0.525\n",
       "------------------------------------------------------\n",
       "\n",
       "Average scores:\n",
       "\n",
-      " Average AUC: 0.682\t Average Kappa: 0.213\t Average Accuracy: 0.589\n"
+      " Average AUC: 0.664\t Average Kappa: 0.235\t Average Accuracy: 0.597\n"
      ]
     }
    ],
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-07T15:44:21.392097Z",
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-07T15:44:21.588573Z",
