--- a/MT4/minitarea4.ipynb
+++ b/MT4/minitarea4.ipynb
@@ -131,7 +131,17 @@
     "colab_type": "text"
    },
    "source": [
-    "**Respuesta**"
+    "**Respuestas**\n",
+    "* Estos modelos sirven para resolver problemas de Tagging, como el Part of Speech (PoS)\n",
+    "o Name Entity Recognition (NER). Dada un documento o texto como input, la tarea de PoS es definir para cada palabra del input\n",
+    "determinar si ésta es un Sustantivo, Adjetivo, Verbo, Adverbio u otro tipo, mientras que la tarea\n",
+    "de NER es determinar qué partes del input pertenecen a algún tipo de entidad (sujeto).\n",
+    "* Los modelos de MEMMs y CRF utilizan features, esto permite tener conocimiento de todas las etiquetas a clasificar, además permite obtener un\n",
+    "manejo especial de las etiquetas a clasificar como actuar según prefijos o sufijos.\n",
+    "* Los modelos HMMs separa las palabras con alto conteo ($\\geq5$) con las de bajo conteo y las clasifica utilizando reglas especiales\n",
+    "determinadas según la tarea a resolver. Los modelos MEMMs y CRFs dentro del vector de features pueden contabilizar especialmente éstas etiquetas\n",
+    "de baja frecuencia para agruparlas en tipos más grandes.\n",
+    "* En el cálculo de la soft-max ...."
    ]
   },
   {
@@ -144,7 +154,7 @@
     "# Convolutional Neural Networks\n",
     "### Pregunta 3 (1 pt)\n",
     "\n",
-    "Considere la frase $w_{1..7}=$ `El agua moja y el fuego quema` $=[El, agua, moja, y, el, fuego, quema]$.\n",
+    "Considere la frase $w_{1..7}=$ \"El agua moja y el fuego quema\" $=[El, agua, moja, y, el, fuego, quema]$.\n",
     "\n",
     "La siguiente matriz de embeddings, donde la i-ésima fila corresponde al vector de embedding de la i-ésima palabra, ordenadas segun aparecen en la frase. (vectores de largo 2).\n",
     "\\begin{equation}\n",
@@ -186,7 +196,38 @@
     "colab_type": "text"
    },
    "source": [
-    "**Respuesta**"
+    "**Respuesta**\n",
+    "\n",
+    "Los 3 filtros son tamaño 6, los embeddings son de 2 dimensiones, de esta\n",
+    "forma el tamaño de la ventana es 3. Esto dan los siguientes trigramas, con sus\n",
+    "vectores de embedding unidos asociados:\n",
+    "* \"El agua moja\" $\\to (2,2,0,-2,0,1)$\n",
+    "* \"agua moja y\" $\\to (0,-2,0,1,-2,1)$\n",
+    "* \"moja y el\" $\\to (0,1,-2,1,-2,0)$\n",
+    "* \"y el fuego\" $\\to (-2,1,-2,0,2,-1)$\n",
+    "* \"el fuego quema\" $\\to (-2,0,2,-1,0,2)$\n",
+    "\n",
+    "Cada uno de estos vectos se le calculará el producto punto de cada filtro de $U$.\n",
+    "Lo cual nos da los siguientes valores:\n",
+    "* $(2,2,0,-2,0,1) \\to ( 3,  2,  1)$\n",
+    "* $(0,-2,0,1,-2,1)  \\to    ( 0, -1, -4)$\n",
+    "* $(0,1,-2,1,-2,0)  \\to    ( 2,  2, -1)$\n",
+    "* $(-2,1,-2,0,2,-1) \\to    (0,  1,  5)$\n",
+    "* $(-2,0,2,-1,0,2)  \\to  ( 5,  3, -3)$\n",
+    "\n",
+    "Ahora cada valor del resultado se le aplicó la función de activación $tanh$\n",
+    "(se aproximó a 3 cifras significativas):\n",
+    "\n",
+    "* $( 3,  2,  1) \\to (0.995,0.964,0.761)$\n",
+    "* $( 0, -1, -4) \\to (0,-0.762,-0.999)$\n",
+    "* $( 2,  2, -1) \\to (0.964,0.964,-0.762)$\n",
+    "* $( 0,  1,  5) \\to (0,0.762,1)$\n",
+    "* $( 5,  3, -3) \\to (1,0.995,-0.995)$\n",
+    "\n",
+    "Finalmente se hace el Pooling, que es escojer el máximo para cada columna\n",
+    "de los resultados de cada filtro:\n",
+    "\n",
+    "* (1, 0.964, 1)"
    ]
   },
   {
@@ -250,7 +291,97 @@
     "colab_type": "text"
    },
    "source": [
-    "**Respuesta**"
+    "**Respuesta**\n",
+    "\n",
+    "Se calcula en primera instancia $R_{SRNN}(\\vec{x}_1,\\vec{s_0})$ \n",
+    "donde \n",
+    "$\\vec{x}_1 = Embed(El) = (1,0)$\n",
+    "\\begin{equation}\n",
+    "\\vec{s}_1 = R_{SRNN}(\\vec{x}_1,\\vec{s_0}) = ReLU(\\vec{s}_{0}W^s + \\vec{x}_1 W^x + \\vec{b}) \\\\\n",
+    "= ReLU(\n",
+    "\\begin{pmatrix}\n",
+    "0,0,0\n",
+    "\\end{pmatrix} \n",
+    "\\begin{pmatrix}\n",
+    "1 & 0 &  1\\\\\n",
+    "0 & 1 & -1\\\\\n",
+    "1 & 1 &  1\n",
+    "\\end{pmatrix} + \n",
+    "\\begin{pmatrix}\n",
+    "1,0\n",
+    "\\end{pmatrix} \n",
+    "\\begin{pmatrix}\n",
+    "0 &  0 & 1\\\\\n",
+    "1 & -1 & 0\n",
+    "\\end{pmatrix} + (0,0,0))  \\\\ \n",
+    "\\end{equation}\n",
+    "\\begin{equation}\n",
+    "= ReLU( (0,0,0) + (0,0,1) + (0,0,0))\n",
+    "\\end{equation}\n",
+    "\\begin{equation}\n",
+    "= ReLU( (0,0,1)) = (0,0,1)\n",
+    "\\end{equation}\n",
+    "Así: $\\vec{y}_1 = O_{SRNN}(\\vec{s}_1) = (0,0,1)$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "$\\vec{x}_2 = Embed(perro) = (-1,1)$\n",
+    "\\begin{equation}\n",
+    "\\vec{s}_2 = R_{SRNN}(\\vec{x}_2,\\vec{s}_1) = ReLU(\\vec{s}_{1}W^s + \\vec{x}_2 W^x + \\vec{b}) \\\\\n",
+    "= ReLU(\n",
+    "\\begin{pmatrix}\n",
+    "0,0,1\n",
+    "\\end{pmatrix} \n",
+    "\\begin{pmatrix}\n",
+    "1 & 0 &  1\\\\\n",
+    "0 & 1 & -1\\\\\n",
+    "1 & 1 &  1\n",
+    "\\end{pmatrix} + \n",
+    "\\begin{pmatrix}\n",
+    "-1,1\n",
+    "\\end{pmatrix} \n",
+    "\\begin{pmatrix}\n",
+    "0 &  0 & 1\\\\\n",
+    "1 & -1 & 0\n",
+    "\\end{pmatrix} + (0,0,0))  \\\\ \n",
+    "\\end{equation}\n",
+    "\\begin{equation}\n",
+    "= ReLU( (1,1,1) + (1,-1,-1) + (0,0,0))\n",
+    "\\end{equation}\n",
+    "\\begin{equation}\n",
+    "= ReLU( (2,0,0)) = (2,0,0)\n",
+    "\\end{equation}\n",
+    "Así: $\\vec{y}_2 = O_{SRNN}(\\vec{s}_2) = (2,0,0)$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "$\\vec{x}_3 = Embed(ladra) = (1,1)$\n",
+    "\\begin{equation}\n",
+    "\\vec{s}_3 = R_{SRNN}(\\vec{x}_3,\\vec{s}_2) = ReLU(\\vec{s}_2W^s + \\vec{x}_3 W^x + \\vec{b}) \\\\\n",
+    "= ReLU(\n",
+    "\\begin{pmatrix}\n",
+    "2,0,0\n",
+    "\\end{pmatrix} \n",
+    "\\begin{pmatrix}\n",
+    "1 & 0 &  1\\\\\n",
+    "0 & 1 & -1\\\\\n",
+    "1 & 1 &  1\n",
+    "\\end{pmatrix} + \n",
+    "\\begin{pmatrix}\n",
+    "1,1\n",
+    "\\end{pmatrix} \n",
+    "\\begin{pmatrix}\n",
+    "0 &  0 & 1\\\\\n",
+    "1 & -1 & 0\n",
+    "\\end{pmatrix} + (0,0,0))  \\\\ \n",
+    "\\end{equation}\n",
+    "\\begin{equation}\n",
+    "= ReLU( (2,0,2) + (1,-1,1) + (0,0,0))\n",
+    "\\end{equation}\n",
+    "\\begin{equation}\n",
+    "= ReLU( (3,-1,3)) = (3,0,3)\n",
+    "\\end{equation}\n",
+    "Así: $\\vec{y}_2 = O_{SRNN}(\\vec{s}_2) = (3,0,3)$"
    ]
   },
   {
@@ -262,7 +393,8 @@
    "source": [
     "### Pregunta 5 (0.5 pts)\n",
     "¿De qué forma las RNN y las CNN logran aprender representaciones específicas\n",
-    "para la tarea objetivo? Compare la forma en que las RNN y las CNN aprenden con los modelos que usan *features* diseñadas manualmente."
+    "para la tarea objetivo? Compare la forma en que las RNN y las CNN aprenden \n",
+    "con los modelos que usan *features* diseñadas manualmente."
    ]
   },
   {
@@ -272,7 +404,7 @@
     "colab_type": "text"
    },
    "source": [
-    "**Respuesta**"
+    "**Respuesta**\n"
    ]
   },
   {
