--- a/MT4/minitarea4.ipynb
+++ b/MT4/minitarea4.ipynb
@@ -8,18 +8,9 @@
    "collapsed_sections": []
   },
   "kernelspec": {
-   "name": "python3",
+   "name": "pycharm-959495b3",
    "language": "python",
-   "display_name": "Python 3"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "source": [],
-    "metadata": {
-     "collapsed": false
-    }
-   }
+   "display_name": "PyCharm (CC6205-NLP)"
   }
  },
  "cells": [
@@ -141,7 +132,7 @@
     "* Los modelos HMMs separa las palabras con alto conteo ($\\geq5$) con las de bajo conteo y las clasifica utilizando reglas especiales\n",
     "determinadas según la tarea a resolver. Los modelos MEMMs y CRFs dentro del vector de features pueden contabilizar especialmente éstas etiquetas\n",
     "de baja frecuencia para agruparlas en tipos más grandes.\n",
-    "* En el cálculo de la soft-max ...."
+    "* ..."
    ]
   },
   {
@@ -293,8 +284,20 @@
    "source": [
     "**Respuesta**\n",
     "\n",
+    "Para cada palabra $\\vec{x}_i$ se calula la función $R_{SRNN}(\\vec{x}_{i},\\vec{s}_{i-1})$ para obtener el estado $\\vec{s}_i$,\n",
+    "para este cálculo se utiliza el vector de embedding de ésta palabra.\n",
+    "\n",
+    "Luego, se realizan las multiplicaciones de matrices, la suma de éstos vectores resultantes para finalmente\n",
+    "para obtener el estado siguiente utilizando la\n",
+    "función de activación dada $g(x) = max(0,x)$.\n",
+    "\n",
+    "Con este estado se utiliza la función $O_{SRRN}$ para obtener el vector $\\vec{y}_i$\n",
+    "\n",
+    "Dado que se obtiene el estado $\\vec{s}_{i}$ se puede calcular el estado siguiente a éste utilizando\n",
+    "$\\vec{x}_{i+1}.\n",
+    "\n",
     "Se calcula en primera instancia $R_{SRNN}(\\vec{x}_1,\\vec{s_0})$ \n",
-    "donde \n",
+    "donde:\n",
     "$\\vec{x}_1 = Embed(El) = (1,0)$\n",
     "\\begin{equation}\n",
     "\\vec{s}_1 = R_{SRNN}(\\vec{x}_1,\\vec{s_0}) = ReLU(\\vec{s}_{0}W^s + \\vec{x}_1 W^x + \\vec{b}) \\\\\n",
@@ -321,7 +324,9 @@
     "\\begin{equation}\n",
     "= ReLU( (0,0,1)) = (0,0,1)\n",
     "\\end{equation}\n",
+    "\n",
     "Así: $\\vec{y}_1 = O_{SRNN}(\\vec{s}_1) = (0,0,1)$\n",
+    "\n",
     "\n",
     "---\n",
     "\n",
@@ -351,6 +356,7 @@
     "\\begin{equation}\n",
     "= ReLU( (2,0,0)) = (2,0,0)\n",
     "\\end{equation}\n",
+    "\n",
     "Así: $\\vec{y}_2 = O_{SRNN}(\\vec{s}_2) = (2,0,0)$\n",
     "\n",
     "---\n",
@@ -381,6 +387,7 @@
     "\\begin{equation}\n",
     "= ReLU( (3,-1,3)) = (3,0,3)\n",
     "\\end{equation}\n",
+    "\n",
     "Así: $\\vec{y}_2 = O_{SRNN}(\\vec{s}_2) = (3,0,3)$"
    ]
   },
@@ -404,7 +411,12 @@
     "colab_type": "text"
    },
    "source": [
-    "**Respuesta**\n"
+    "**Respuesta**\n",
+    "Aprenden a través de la refinación de sus parámetros a medidas que se va realizando\n",
+    "el cómputo de la minimización de la loss durante las múltiples iteraciones del entrenamiento.\n",
+    "Por lo que al utilizar algún modelo que utiliza features éste sólo necesita leer una única vez\n",
+    "(contar palabras, largo, etc.) el set de entrenamiento para determinar los parámetros internos para\n",
+    "resolver la tarea."
    ]
   },
   {
@@ -416,10 +428,18 @@
    "source": [
     "# Redes neuronales con PyTorch\n",
     "### Pregunta 6 (2 pts)\n",
-    "En esta parte van a tener que implementar una red neuronal Feed Forward. Además, deberán entrenar el modelo usando uno de los datasets de TorchText. En la sección de la respuesta hay un esqueleto de lo que deben hacer, deberán completar los metodos del modelo y la parte asociada al entrenamiento la deben implementar ustedes. De todas formas, como les mencionamos en las auxiliares, el proceso de entrenamiento es bastante estándar, así que se pueden guiar en gran medida por los ejemplos que hemos visto y los que vamos a ver en las próximas auxiliares.\n",
+    "En esta parte van a tener que implementar una red neuronal Feed Forward.\n",
+    "Además, deberán entrenar el modelo usando uno de los datasets de TorchText.\n",
+    "En la sección de la respuesta hay un esqueleto de lo que deben hacer,\n",
+    "deberán completar los metodos del modelo y la parte asociada al entrenamiento la deben implementar ustedes.\n",
+    "De todas formas, como les mencionamos en las auxiliares, el proceso de entrenamiento es bastante estándar,\n",
+    "así que se pueden guiar en gran medida por los ejemplos que hemos visto y\n",
+    "los que vamos a ver en las próximas auxiliares.\n",
     "\n",
     "### Bonus (0.5 pts)\n",
-    "Agregue a la arquitectura una capa convolucional, para esto debe registrar el parametro $U$ en la red y realizar el computo de la convolución en el metodo forward de la red.\n"
+    "Agregue a la arquitectura una capa convolucional,\n",
+    "para esto debe registrar el parametro $U$ en la red y realizar el computo\n",
+    "de la convolución en el metodo forward de la red.\n"
    ]
   },
   {
@@ -434,7 +454,7 @@
     "# Nos aseguramos que torchtext este en la ultima version\n",
     "!pip install --upgrade torchtext"
    ],
-   "execution_count": null,
+   "execution_count": 45,
    "outputs": []
   },
   {
@@ -459,29 +479,28 @@
     "\n",
     "print(\"\\nUn ejemplo aleatorio\\n\", choice(train_dataset))"
    ],
-   "execution_count": null,
+   "execution_count": 46,
    "outputs": [
     {
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "120000lines [00:04, 24564.27lines/s]\n",
-      "120000lines [00:10, 11828.78lines/s]\n",
-      "7600lines [00:00, 12870.97lines/s]\n"
-     ],
-     "name": "stderr"
+      "120000lines [00:05, 23073.21lines/s]\n",
+      "120000lines [00:08, 13527.96lines/s]\n",
+      "7600lines [00:00, 14283.47lines/s]\n"
+     ]
     },
     {
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
       "Un ejemplo aleatorio\n",
-      " (0, tensor([  197,     4,   380,   233,     5,   808,   362,   174,     3,   705,\n",
-      "            9,  1558,   397,  1622,   790,    49,   302,     7,   362,   174,\n",
-      "           56,    19,  2587,     7,    47,  1441,    11, 40274,  2569,    46,\n",
-      "           79,   764,     7,  1427,   855,  5633,    41,  8658,  1220,    39,\n",
-      "         1218,   506,     2]))\n"
-     ],
-     "name": "stdout"
+      " (1, tensor([  499,  1319, 32717,     5,  3531,    12,  4522,     3,   742, 29573,\n",
+      "           41,  4325,     4,  1447,  9824, 32717,     9,   707,     5,     3,\n",
+      "         3531,    12, 12353,   336,  6662,  4522,     9,  7063,     6,   269,\n",
+      "            5, 49901,  1122, 17623,    30,     3,  1493,     2]))\n"
+     ]
     }
    ]
   },
@@ -508,18 +527,18 @@
     "# Un ejemplo convertido a texto\n",
     "pprint(\" \".join(vocab.itos[token] for token in choice(train_dataset)[1]))"
    ],
-   "execution_count": null,
+   "execution_count": 47,
    "outputs": [
     {
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "{0, 1, 2, 3}\n",
-      "('c amp w says sayonara to japan uk-based cable amp wireless , which has been '\n",
-      " 'selling off pieces of itself or just discontinuing business in certain world '\n",
-      " 'markets it finds unprofitable , is trading its japanese presence to that '\n",
-      " 'country #39 s softbank corp .')\n"
-     ],
-     "name": "stdout"
+      "('state street profit drops , job cuts coming boston ( reuters ) - state '\n",
+      " \"street corp . , the world ' s biggest institutional asset manager , on \"\n",
+      " 'tuesday said third-quarter profit fell 12 percent amid lower revenue and '\n",
+      " 'higher expenses , sending its shares tumbling .')\n"
+     ]
     }
    ]
   },
@@ -536,17 +555,32 @@
     "# cargar\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "\n",
+    "import torch.nn.functional as F\n",
     "\n",
     "class CNNClassifier(nn.Module):\n",
-    "    def __init__(self, *args): # Reemplacen el *args por sus argumento\n",
+    "    def __init__(self, vocab_size, embed_dim, num_class, pad_idx, cnn_dim, hidden_size): # Reemplacen el *args por sus argumento\n",
+    "        super().__init__()\n",
+    "        self.embedding = nn.Embedding(\n",
+    "            vocab_size,\n",
+    "            embed_dim,\n",
+    "            pad_idx)\n",
+    "        self.cnn = nn.Conv1d(1, cnn_dim, 3*embed_dim,stride=embed_dim) # thx aux 4\n",
+    "        self.fc1 = nn.Linear(cnn_dim, hidden_size) # thx aux 3\n",
+    "        self.fc2 = nn.Linear(hidden_size, num_class)\n",
     "        # Aca deben registrar sus parametros. A lo menos necesitan\n",
     "        # una capa de embedding y un MLP basico (una capa lineal + softmax)\n",
     "\n",
-    "    def forward(self, *args):\n",
-    "        # Aca debe programar la pasada hacia adelante"
+    "    def forward(self, batch):\n",
+    "        # (B, N, E) -> (B, E)\n",
+    "        z = self.embedding(batch)\n",
+    "        z = z.view(z.shape[0], 1, -1)\n",
+    "        z = torch.tanh(self.cnn(z))\n",
+    "        z = z.max(dim=-1).values\n",
+    "        z = F.relu(self.fc1(z))\n",
+    "        z = F.relu(self.fc2(z))\n",
+    "        return torch.softmax(z,-1)"
    ],
-   "execution_count": null,
+   "execution_count": 48,
    "outputs": []
   },
   {
@@ -558,10 +592,150 @@
    },
    "source": [
     "# El resto de su respuesta\n",
-    "# Aca deben programar el entrenamiento de la red"
+    "# Aca deben programar el entrenamiento de la red\n",
+    "\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "from itertools import zip_longest\n",
+    "\n",
+    "def generate_batch(batch):\n",
+    "    return (\n",
+    "        # En este caso como los labels son numeros, el tensor es de 1 dimension\n",
+    "        # de tamanno batch_size\n",
+    "        torch.tensor([item[0] for item in batch]),\n",
+    "\n",
+    "        # En este caso se retorna un tensor de 2 dimensiones, batch_size x N,\n",
+    "        # donde N es mayor largo de los ejemplo en el batch. Aca se realiza\n",
+    "        # padding de los ejemplos mas cortos.\n",
+    "        torch.tensor(\n",
+    "            list(\n",
+    "                zip(\n",
+    "                    *zip_longest(\n",
+    "                        *[item[1] for item in batch], fillvalue=vocab[\"<pad>\"]\n",
+    "                    )))),)\n",
+    "\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "def train_func(train_dataset):\n",
+    "\n",
+    "    # Entranamos el modelo\n",
+    "    train_loss = 0\n",
+    "    train_acc = 0\n",
+    "    data = DataLoader(\n",
+    "        train_dataset,\n",
+    "        batch_size=BATCH_SIZE,\n",
+    "        shuffle=True,\n",
+    "        collate_fn=generate_batch,\n",
+    "    )\n",
+    "    for i, (cls, text) in enumerate(data):\n",
+    "        optimizer.zero_grad()\n",
+    "        cls, text = cls.to(device), text.to(device)\n",
+    "        output = model(text)\n",
+    "        loss = criterion(output, cls)\n",
+    "        train_loss += loss.item()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        train_acc += (output.argmax(1) == cls).sum().item()\n",
+    "\n",
+    "    # Ajustar el learning rate\n",
+    "    scheduler.step()\n",
+    "\n",
+    "    return train_loss / len(train_dataset), train_acc / len(train_dataset)\n",
+    "\n",
+    "def test(test_dataset):\n",
+    "    test_loss = 0\n",
+    "    acc = 0\n",
+    "    data = DataLoader(\n",
+    "        test_dataset, batch_size=BATCH_SIZE, collate_fn=generate_batch\n",
+    "    )\n",
+    "    for cls, text in data:\n",
+    "        cls, text = cls.to(device), text.to(device)\n",
+    "        with torch.no_grad():\n",
+    "            output = model(text)\n",
+    "            loss = criterion(output, cls)\n",
+    "            test_loss += loss.item()\n",
+    "            acc += (output.argmax(1) == cls).sum().item()\n",
+    "\n",
+    "    return test_loss / len(test_dataset), acc / len(test_dataset)"
    ],
-   "execution_count": null,
+   "execution_count": 49,
    "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1  | time in 0 minutes, 37 seconds\n",
+      "\tLoss: 0.0433(train)\t|\tAcc: 25.0%(train)\n",
+      "\tLoss: 0.0434(valid)\t|\tAcc: 25.0%(valid)\n",
+      "Epoch: 2  | time in 0 minutes, 39 seconds\n",
+      "\tLoss: 0.0433(train)\t|\tAcc: 25.0%(train)\n",
+      "\tLoss: 0.0434(valid)\t|\tAcc: 25.0%(valid)\n",
+      "Epoch: 3  | time in 0 minutes, 39 seconds\n",
+      "\tLoss: 0.0433(train)\t|\tAcc: 25.0%(train)\n",
+      "\tLoss: 0.0434(valid)\t|\tAcc: 25.0%(valid)\n",
+      "Epoch: 4  | time in 0 minutes, 38 seconds\n",
+      "\tLoss: 0.0433(train)\t|\tAcc: 25.0%(train)\n",
+      "\tLoss: 0.0434(valid)\t|\tAcc: 25.0%(valid)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "N_EPOCHS = 5\n",
+    "LEARN_RATE = 4.0\n",
+    "STEP_SIZE = 1\n",
+    "BATCH_SIZE = 32\n",
+    "EMBED_DIM = 100\n",
+    "CNN_DIM = 35\n",
+    "HIDDEN_SIZE = 200\n",
+    "\n",
+    "\n",
+    "model = CNNClassifier(\n",
+    "    vocab_size=len(vocab),\n",
+    "    embed_dim=EMBED_DIM,\n",
+    "    num_class=len(labels),\n",
+    "    pad_idx=vocab[\"<pad>\"],\n",
+    "    cnn_dim=CNN_DIM,\n",
+    "    hidden_size=HIDDEN_SIZE).to(device)\n",
+    "\n",
+    "criterion = torch.nn.CrossEntropyLoss().to(device)\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=LEARN_RATE)\n",
+    "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, STEP_SIZE)\n",
+    "\n",
+    "for epoch in range(N_EPOCHS):\n",
+    "\n",
+    "    start_time = time.time()\n",
+    "    train_loss, train_acc = train_func(train_dataset)\n",
+    "    valid_loss, valid_acc = test(test_dataset)\n",
+    "\n",
+    "    secs = int(time.time() - start_time)\n",
+    "    mins = secs // 60\n",
+    "    secs = secs % 60\n",
+    "\n",
+    "    print(\n",
+    "        f\"Epoch: {epoch + 1}\", f\" | time in {mins} minutes, {secs} seconds\",\n",
+    "    )\n",
+    "    print(\n",
+    "        f\"\\tLoss: {train_loss:.4f}(train)\\t|\"\n",
+    "        f\"\\tAcc: {train_acc * 100:.1f}%(train)\"\n",
+    "    )\n",
+    "    print(\n",
+    "        f\"\\tLoss: {valid_loss:.4f}(valid)\\t|\"\n",
+    "        f\"\\tAcc: {valid_acc * 100:.1f}%(valid)\"\n",
+    "    )"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
   }
  ]
 }
